--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,7 @@ name: Terraform CI/CD
 on:
   push:
     branches:
-      - main  # Cambia "main" si usas otra rama para despliegues
+      - main  # Cambia "main" si usas otra rama para los despliegues
 
 jobs:
   terraform:
@@ -15,28 +15,29 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 1.9.6 
+          terraform_version: 1.9.6  # Cambia si usas otra versión
 
       - name: Terraform Init
-        run: terraform init
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"  # Agrega la región como variable de entorno
-          AWS_PROFILE: ""  # Fuerza a no usar ningún perfil
+          AWS_REGION: "us-east-1"  # Región que estás usando
+          AWS_PROFILE: ""  # Asegura que no use el perfil "default"
+        run: terraform init
 
       - name: Terraform Plan
-        run: terraform plan -out=plan.out
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"  # Agrega la región como variable de entorno
-          AWS_PROFILE: ""  # Fuerza a no usar ningún perfil
+          AWS_REGION: "us-east-1"  # Región que estás usando
+          AWS_PROFILE: ""  # Asegura que no use el perfil "default"
+        run: terraform plan -out=plan.out
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve plan.out
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"  # Agrega la región como variable de entorno
-          AWS_PROFILE: ""  # Fuerza a no usar ningún perfil
+          AWS_REGION: "us-east-1"  # Región que estás usando
+          AWS_PROFILE: ""  # Asegura que no use el perfil "default"
+        run: terraform apply -auto-approve plan.out
+
