--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,7 @@ name: Terraform CI/CD
 on:
   push:
     branches:
-      - main  # Cambia "main" si usas otra rama para los despliegues
+      - main  # Cambia "main" si usas otra rama para despliegues
 
 jobs:
   terraform:
@@ -15,30 +15,29 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 1.9.6  # Versión de Terraform que usas
+          terraform_version: 1.9.6  # Asegúrate de usar esta versión
 
       - name: Terraform Init
+        run: terraform init
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"  # Asegúrate de que esta sea tu región
-          AWS_PROFILE: ""  # Asegúrate de que no intente usar el perfil "default"
-        run: terraform init
+          AWS_REGION: us-east-1
+          AWS_PROFILE: ""
 
       - name: Terraform Plan
+        run: terraform plan -out=plan.out
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"  # Asegúrate de que esta sea tu región
-          AWS_PROFILE: ""  # Asegúrate de que no intente usar el perfil "default"
-        run: terraform plan -out=plan.out
+          AWS_REGION: us-east-1
+          AWS_PROFILE: ""
 
       - name: Terraform Apply
+        run: terraform apply -auto-approve plan.out
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"  # Asegúrate de que esta sea tu región
-          AWS_PROFILE: ""  # Asegúrate de que no intente usar el perfil "default"
-        run: terraform apply -auto-approve plan.out
-
+          AWS_REGION: us-east-1
+          AWS_PROFILE: ""
 
