--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,26 +18,25 @@ jobs:
           terraform_version: 1.9.6  # Asegúrate de usar esta versión
 
       - name: Terraform Init
-        run: terraform init
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1
-          AWS_PROFILE: ""
+          AWS_REGION: "us-east-1"
+          AWS_PROFILE: "desarrollo_software"  # Establece el perfil que deseas usar
+        run: terraform init
 
       - name: Terraform Plan
-        run: terraform plan -out=plan.out
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1
-          AWS_PROFILE: ""
+          AWS_REGION: "us-east-1"
+          AWS_PROFILE: "desarrollo_software"  # Establece el perfil que deseas usar
+        run: terraform plan -out=plan.out
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve plan.out
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1
-          AWS_PROFILE: ""
-
+          AWS_REGION: "us-east-1"
+          AWS_PROFILE: "desarrollo_software"  # Establece el perfil que deseas usar
+        run: terraform apply -auto-approve plan.out
