--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,22 +21,20 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"
-          AWS_PROFILE: "desarrollo_software"  # Establece el perfil que deseas usar
+          AWS_REGION: "us-east-1"  # Cambia esta región si es necesario
         run: terraform init
 
       - name: Terraform Plan
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"
-          AWS_PROFILE: "desarrollo_software"  # Establece el perfil que deseas usar
+          AWS_REGION: "us-east-1"  # Cambia esta región si es necesario
         run: terraform plan -out=plan.out
 
       - name: Terraform Apply
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"
-          AWS_PROFILE: "desarrollo_software"  # Establece el perfil que deseas usar
+          AWS_REGION: "us-east-1"  # Cambia esta región si es necesario
         run: terraform apply -auto-approve plan.out
+
